# Kiselev-MS-Thesis

./: README.md
code/: README.md  requirements.txt
code/transformer/: README.md  pyproject.toml
code/transformer/configs/: run_fig2_fig3.sh  run_fig4.sh  run_fig5_fig6.sh  run_tab2.sh
code/transformer/experiments/fig2_delta_k_decay/: launch_seeds.py  merge.py  run.py
code/transformer/experiments/fig3_subspace_ratio/: plot.py
code/transformer/experiments/fig4_quadratic_sigma/: plot.py  run.py
code/transformer/experiments/fig5_6_robustness/: plot.py  run.py
code/transformer/experiments/tab2_estimator_phases/: run.py
code/transformer/nanochat/: common.py  tokenizer.py
code/transformer/scripts/: __init__.py  delta2_subspace_estimators.py  delta_criteria_k.py
paper/: main.tex  preamble.tex  references.bib
paper/sections/: abstract.tex  appendix.tex  conclusion.tex  introduction.tex  references.tex  section1.tex  section2.tex  section3.tex  section4.tex  title.tex
review/: advisor.tex  opponent.tex
slides/: main.tex  nir-12.tex  pre-defense.tex
